--- a/assets/styles/article.css
+++ b/assets/styles/article.css
@@ -12,6 +12,7 @@
 /* Navbar */
 nav {
     font-family: "Semibold";
+    background-color: #FFFFFF;
 }
   
 #logo {
@@ -25,9 +26,18 @@ nav {
 
 #artikel {
     cursor: pointer;
+    padding-top: 4rem;
 }
 
-.card {
+.card-artikel {
+    background: #FFFFFF;
+    border: 1px solid #D9D9D9;
+    box-shadow: 0px 8px 24px rgba(112, 144, 176, 0.15);
+    border-radius: 8px;
+    padding-bottom: 10px;
+}
+
+.card-infografis {
     background: #FFFFFF;
     border: 1px solid #D9D9D9;
     box-shadow: 0px 8px 24px rgba(112, 144, 176, 0.15);
@@ -67,4 +77,14 @@ footer {
     #country {
         margin-top: 0.2em;
     }
+
 }
+
+/* @media (max-width:700px){
+
+    .card {
+        height: 510px !important;
+    }
+
+} */
+
