--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -9,6 +9,9 @@
   --color-main: #14ae5c;
 }
 
+.bg-main{
+  background-color: #14ae5c;
+}
 /* Navbar */
 nav {
   font-family: "Semibold";
@@ -27,6 +30,7 @@ nav {
 footer {
   font-family: "Semibold";
   background-color: var(--color-main);
+  
 }
 
 .judulDeskripsiEnvironthink {
