--- a/assets/styles/article.css
+++ b/assets/styles/article.css
@@ -18,23 +18,51 @@ nav {
 #logo {
     height: 2.4em;
 }
-  
+
+#dot2 {
+    height: 7px;
+    width: 7px;
+    background-color: #6f7376;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.wrapperLinkTitleArticles {
+    cursor: pointer;
+    color: black;
+    text-decoration: none;
+    text-decoration-color: black;
+}
+
+.wrapperLinkTitleArticles:hover {
+    cursor: pointer;
+    color: black;
+    text-decoration: underline;
+    text-decoration-color: black;
+}
+
 .btnDonasi {
     background-color: var(--color-main) !important;
     color: var(--color-bg) !important;
 }
 
 #artikel {
-    cursor: pointer;
     padding-top: 4rem;
 }
 
 .card-artikel {
+    cursor: pointer;
     background: #FFFFFF;
     border: 1px solid #D9D9D9;
     box-shadow: 0px 8px 24px rgba(112, 144, 176, 0.15);
     border-radius: 8px;
     padding-bottom: 10px;
+}
+
+.card-artikel:hover {
+    cursor: pointer;
+    box-shadow: 0px 8px 28px rgba(1, 1, 1, 0.15);
+    border-radius: 8px;
 }
 
 .card-infografis {
@@ -44,8 +72,9 @@ nav {
     border-radius: 8px;
 }
 
-#infografis {
-    cursor: pointer;
+.card-infografis:hover {
+    box-shadow: 0px 8px 28px rgba(1, 1, 1, 0.15);
+    border-radius: 8px;
 }
 
 /* Footer */
