--- a/assets/styles/article.css
+++ b/assets/styles/article.css
@@ -1,111 +1,109 @@
 /* Font */
 @font-face {
-    font-family: "Semibold";
-    src: url(../font/static/PlusJakartaSans-SemiBold.ttf);
+  font-family: "Semibold";
+  src: url(../font/static/PlusJakartaSans-SemiBold.ttf);
 }
-  
+
 :root {
-    --color-bg: #ffffff;
-    --color-main: #14ae5c;
+  --color-bg: #ffffff;
+  --color-main: #14ae5c;
 }
-  
+
 /* Navbar */
 nav {
-    font-family: "Semibold";
-    background-color: #FFFFFF;
+  font-family: "Semibold";
+  background-color: #ffffff;
 }
-  
+
 #logo {
-    height: 2.4em;
+  height: 2.4em;
 }
 
 #dot2 {
-    height: 7px;
-    width: 7px;
-    background-color: #6f7376;
-    border-radius: 50%;
-    display: inline-block;
+  height: 7px;
+  width: 7px;
+  background-color: #6f7376;
+  border-radius: 50%;
+  display: inline-block;
 }
 
 .wrapperLinkTitleArticles {
-    cursor: pointer;
-    color: black;
-    text-decoration: none;
-    text-decoration-color: black;
+  cursor: pointer;
+  color: black;
+  text-decoration: none;
+  text-decoration-color: black;
 }
 
 .wrapperLinkTitleArticles:hover {
-    cursor: pointer;
-    color: black;
-    text-decoration: underline;
-    text-decoration-color: black;
+  cursor: pointer;
+  color: black;
+  text-decoration: underline;
+  text-decoration-color: black;
 }
 
 .btnDonasi {
-    background-color: var(--color-main) !important;
-    color: var(--color-bg) !important;
+  background-color: var(--color-main) !important;
+  color: var(--color-bg) !important;
 }
 
 #artikel {
-    padding-top: 4rem;
+  padding-top: 4rem;
 }
 
 .card-artikel {
-    cursor: pointer;
-    background: #FFFFFF;
-    border: 1px solid #D9D9D9;
-    box-shadow: 0px 8px 24px rgba(112, 144, 176, 0.15);
-    border-radius: 8px;
-    padding-bottom: 10px;
+  cursor: pointer;
+  background: #ffffff;
+  border: 1px solid #d9d9d9;
+  box-shadow: 0px 8px 24px rgba(112, 144, 176, 0.15);
+  border-radius: 8px;
+  padding-bottom: 10px;
 }
 
 .card-artikel:hover {
-    cursor: pointer;
-    box-shadow: 0px 8px 28px rgba(1, 1, 1, 0.15);
-    border-radius: 8px;
+  cursor: pointer;
+  box-shadow: 0px 8px 28px rgba(1, 1, 1, 0.15);
+  border-radius: 8px;
 }
 
 .card-infografis {
-    background: #FFFFFF;
-    border: 1px solid #D9D9D9;
-    box-shadow: 0px 8px 24px rgba(112, 144, 176, 0.15);
-    border-radius: 8px;
+  background: #ffffff;
+  border: 1px solid #d9d9d9;
+  box-shadow: 0px 8px 24px rgba(112, 144, 176, 0.15);
+  border-radius: 8px;
 }
 
 .card-infografis:hover {
-    box-shadow: 0px 8px 28px rgba(1, 1, 1, 0.15);
-    border-radius: 8px;
+  box-shadow: 0px 8px 28px rgba(1, 1, 1, 0.15);
+  border-radius: 8px;
 }
 
 /* Footer */
 footer {
-    font-family: "Semibold";
-    background-color: var(--color-main);
+  font-family: "Semibold";
+  background-color: var(--color-main);
 }
 
 .judulDeskripsiEnvironthink {
-    color: #25ff01 !important;
+  color: #25ff01 !important;
 }
 
 .container p {
-    color: white;
+  color: white;
 }
 
 #copyRightLine {
-    height: 2px;
-    border: none;
-    background-color: white;
+  height: 2px;
+  border: none;
+  background-color: white;
 }
 
 /* Media Query */
 @media screen and (max-width: 576px) {
-    #medsos {
-        margin-top: 1em;
-    }
+  #medsos {
+    margin-top: 1em;
+  }
 
-    #country {
-        margin-top: 0.2em;
-    }
-
+  #country {
+    margin-top: 0.2em;
+  }
 }
-
