--- a/assets/styles/search.css
+++ b/assets/styles/search.css
@@ -24,6 +24,15 @@ nav {
   height: 2.4em;
 }
 
+#dot2 {
+  height: 7px;
+  width: 7px;
+  background-color: #6f7376;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 0 0.3em;
+}
+
 /* Search */
 .inputSearch {
   font-family: "Regular";
@@ -39,6 +48,33 @@ nav {
   background-color: var(--color-main) !important;
 }
 
+/* Search Result Article */
+.wrapperLinkTitleArticles {
+  cursor: pointer;
+  color: black;
+  text-decoration: none;
+  text-decoration-color: black;
+}
+
+.wrapperLinkTitleArticles:hover {
+  cursor: pointer;
+  color: black;
+  text-decoration: underline;
+  text-decoration-color: black;
+}
+
+.wrapperNotFound {
+  background-color: #f1f1f1;
+}
+
+.titleNotFoundArticle {
+  font-family: "Semibold";
+}
+
+.possibleNotFoundKeyword1,
+.possibleNotFoundKeyword2 {
+  font-family: "Semibold";
+}
 /* Footer */
 footer {
   font-family: "Semibold";
@@ -67,5 +103,11 @@ footer {
 
   #country {
     margin-top: 0.2em;
+  }
+}
+
+@media screen and (min-width: 576px) {
+  footer {
+    margin-top: 10.5em;
   }
 }
