--- a/assets/styles/search.css
+++ b/assets/styles/search.css
@@ -114,5 +114,31 @@ footer {
 @media screen and (min-width: 576px) {
   footer {
     margin-top: 10.5em;
+    /* position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0; */
+  }
+}
+
+@media screen and (min-width: 720px) {
+  footer {
+    margin-top: 40em;
+    /* position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0; */
+  }
+}
+
+@media screen and (min-width: 900px) {
+  footer {
+    margin-top: 30em;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  footer {
+    margin-top: 18em;
   }
 }
